src/objects/CINT_SOAP_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Contains settings uniq for CINT SAOP integration</description>
    <fields>
        <fullName>CINT_Custom_Error_Code__c</fullName>
        <defaultValue>&quot;MsgCode&quot;</defaultValue>
        <description>Holds the xml tag name</description>
        <label>CINT Custom Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CINT_Custom_Error_Description__c</fullName>
        <defaultValue>&quot;Message&quot;</defaultValue>
        <description>Holds the xml tag name</description>
        <label>CINT Custom Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOAP_Error_Code__c</fullName>
        <defaultValue>&quot;faultcode&quot;</defaultValue>
        <description>Holds the xml tag name</description>
        <label>SOAP Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOAP_Error_Description__c</fullName>
        <defaultValue>&quot;faultstring&quot;</defaultValue>
        <description>Holds the xml tag name</description>
        <label>SOAP Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CINT SOAP Integration Settings</label>
</CustomObject>